searchbar not showing on contact page fixed and starting contact page and form

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@ body {
   width: 100%;
   font-family: sans-serif;
   color: #222;
-  width: 100%;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
@@ -22,7 +21,6 @@ body {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  background: white;
 }
 
 h1,
@@ -49,13 +47,6 @@ h4 {
 
 p {
   margin: 0 0 1.15em;
-}
-
-.container {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 24px;
 }
 
 .btn-modal {
