--- a/src/components/Maps/map.scss
+++ b/src/components/Maps/map.scss
@@ -1,5 +1,9 @@
 .mapDiv {
-	margin-top: 5rem;
+	display:flex;
+	justify-content: center;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 2rem;
 	width: 1500px;
 	height: 1000px;
 
